add categories repository
